--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.3",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.4",
     "morgan": "^1.10.0",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "xml2js": "^0.4.23"
   }
 }
