--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "api-railway-api": "^1.0.2",
     "axios": "^1.2.3",
+    "fetch": "^1.1.0",
+    "node-fetch": "^3.3.0",
+    "user-agents": "^1.0.1267",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
